force-app/main/default/objects/Project__c/fields/Acceptance_Criteria__c.field-meta.xml
<CustomField>
    <fullName>Acceptance_Criteria__c</fullName>
    <inlineHelpText>Input clearly defined criteria for when the project&apos;s output is accepted.</inlineHelpText>
    <label>Acceptance Criteria</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>