force-app/main/default/objects/Project__c/fields/Being_Reviewed_By__c.field-meta.xml
<CustomField>
    <fullName>Being_Reviewed_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Being Reviewed By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Project_Being_Reviewed_By</relationshipName>
    <type>Lookup</type>
</CustomField>