force-app/main/default/objects/Project__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bug</fullName>
            </value>
            <value>
                <fullName>Improvement</fullName>
            </value>
            <value>
                <fullName>New Feature</fullName>
            </value>
            <value>
                <fullName>Maintenance</fullName>
            </value>
            <value>
                <fullName>Research</fullName>
            </value>
            <value>
                <fullName>Optimization</fullName>
            </value>
            <value>
                <fullName>Documentation</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Report / Dashboard Request</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>