force-app/main/default/objects/Project__c/fields/Cumulative_Child_Project_Estimates__c.field-meta.xml
<CustomField>
    <fullName>Cumulative_Child_Project_Estimates__c</fullName>
    <label>Cumulative Child Project Estimates</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>