force-app/main/default/objects/Project__c/fields/Date_of_Completion__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Completion__c</fullName>
    <inlineHelpText>This date is set when the project is marked as completed.</inlineHelpText>
    <label>Date of Completion</label>
    <type>Date</type>
</CustomField>