force-app/main/default/objects/Project__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Used for entering an in-depth description of the project</description>
    <label>Project Description</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>