force-app/main/default/objects/Project__c/fields/Estimation_Hours__c.field-meta.xml
<CustomField>
    <fullName>Estimation_Hours__c</fullName>
    <label>Estimation (Hours)</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>