force-app/main/default/objects/Project__c/fields/Experience_Gained__c.field-meta.xml
<CustomField>
    <fullName>Experience_Gained__c</fullName>
    <inlineHelpText>When the project is completed, make note of any experience gained from the project. This can be used for future reference, to increase the likelihood of success of future projects.</inlineHelpText>
    <label>Experience Gained</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>