force-app/main/default/objects/Project__c/fields/Hours_Logged__c.field-meta.xml
<CustomField>
    <fullName>Hours_Logged__c</fullName>
    <label>Hours Logged</label>
    <summarizedField>Project_Work_Log__c.Hours_Logged__c</summarizedField>
    <summaryForeignKey>Project_Work_Log__c.Project__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>