force-app/main/default/objects/Project__c/fields/Hours_Logged_on_Child_Projects__c.field-meta.xml
<CustomField>
    <fullName>Hours_Logged_on_Child_Projects__c</fullName>
    <label>Hours Logged on Child Projects</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>