force-app/main/default/objects/Project__c/fields/Is_Child_Project__c.field-meta.xml
<CustomField>
    <fullName>Is_Child_Project__c</fullName>
    <formula>NOT(ISBLANK(Parent_Project__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Child Project</label>
    <type>Checkbox</type>
</CustomField>