force-app/main/default/objects/Project__c/fields/Is_From_Converted_Case__c.field-meta.xml
<CustomField>
    <fullName>Is_From_Converted_Case__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is From Converted Case</label>
    <type>Checkbox</type>
</CustomField>