force-app/main/default/objects/Project__c/fields/Is_Long_Term_Project__c.field-meta.xml
<CustomField>
    <fullName>Is_Long_Term_Project__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Long Term Project</label>
    <type>Checkbox</type>
</CustomField>