force-app/main/default/objects/Project__c/fields/Is_Parent_Project__c.field-meta.xml
<CustomField>
    <fullName>Is_Parent_Project__c</fullName>
    <formula>IF(  RecordType.DeveloperName = &quot;Parent_Project&quot;, true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Parent Project</label>
    <type>Checkbox</type>
</CustomField>