force-app/main/default/objects/Project__c/fields/KPI_Information__c.field-meta.xml
<CustomField>
    <fullName>KPI_Information__c</fullName>
    <inlineHelpText>If possible, enter information about how the project is measurable in terms of success - how can we prove that the project has lived up to its goals?</inlineHelpText>
    <label>KPI Information</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>