force-app/main/default/objects/Project__c/fields/Number_of_Completed_Child_Projects__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Completed_Child_Projects__c</fullName>
    <label>Number of Completed Child Projects</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>