force-app/main/default/objects/Project__c/fields/On_Hold_Reason__c.field-meta.xml
<CustomField>
    <fullName>On_Hold_Reason__c</fullName>
    <label>On Hold Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>On_Hold_Reason</valueSetName>
    </valueSet>
</CustomField>