force-app/main/default/objects/Project__c/fields/Other_Relevant_Information__c.field-meta.xml
<CustomField>
    <fullName>Other_Relevant_Information__c</fullName>
    <label>Other Relevant Information</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>