force-app/main/default/objects/Project__c/fields/Potential_Risks__c.field-meta.xml
<CustomField>
    <fullName>Potential_Risks__c</fullName>
    <inlineHelpText>If there are any risks involved with the projects, note them here.</inlineHelpText>
    <label>Potential Risks</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>