force-app/main/default/objects/Project__c/fields/Priority_Icon__c.field-meta.xml
<CustomField>
    <fullName>Priority_Icon__c</fullName>
    <formula>CASE(
  TEXT(Priority__c),
  &quot;Very Low&quot;,  &quot;❄️&quot;,
  &quot;Low&quot;,       &quot;🌱&quot;,
  &quot;Medium&quot;,    &quot;⚖️&quot;,
  &quot;High&quot;,      &quot;🚀&quot;,
  &quot;Very High&quot;, &quot;🔥&quot;,
  &quot;&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Priority Icon</label>
    <type>Text</type>
</CustomField>