force-app/main/default/objects/Project__c/fields/Project_Goals__c.field-meta.xml
<CustomField>
    <fullName>Project_Goals__c</fullName>
    <inlineHelpText>Enter information about the goals of this project, e.g. the effect of the desired outcome.</inlineHelpText>
    <label>Project Goals</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>