force-app/main/default/objects/Project__c/fields/Reason_for_Cancellation__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_Cancellation__c</fullName>
    <label>Reason for Cancellation</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>