force-app/main/default/objects/Project__c/fields/Requirements__c.field-meta.xml
<CustomField>
    <fullName>Requirements__c</fullName>
    <inlineHelpText>Enter information about the project requirements. This can both be in terms of involvement from specific employees, monetary requirements or other types of requirements.</inlineHelpText>
    <label>Requirements</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>