force-app/main/default/objects/Project__c/fields/Slack_Channel_ID__c.field-meta.xml
<CustomField>
    <fullName>Slack_Channel_ID__c</fullName>
    <label>Slack Channel ID</label>
    <length>12</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>