force-app/main/default/objects/Project__c/fields/Source_Case__c.field-meta.xml
<CustomField>
    <fullName>Source_Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Source Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Projects</relationshipLabel>
    <relationshipName>Projects</relationshipName>
    <type>Lookup</type>
</CustomField>