force-app/main/default/objects/Project__c/fields/Total_Hours_Logged__c.field-meta.xml
<CustomField>
    <fullName>Total_Hours_Logged__c</fullName>
    <formula>Hours_Logged__c +  Hours_Logged_on_Child_Projects__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This field only shows on Parent Projects and combined the Hours Logged directly on the Parent, with the Hours Logged on Child Record</inlineHelpText>
    <label>Total Hours Logged</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>