force-app/main/default/objects/Project__c/recordTypes/Parent_Project.recordType-meta.xml
<RecordType>
    <fullName>Parent_Project</fullName>
    <active>true</active>
    <label>Parent Project</label>
</RecordType>