force-app/main/default/objects/Project__c/validationRules/Child_Project_Must_have_a_Parent.validationRule-meta.xml
<ValidationRule>
    <fullName>Child_Project_Must_have_a_Parent</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    RecordType.DeveloperName = &quot;Child_Project&quot;,
    ISBLANK(Parent_Project__c)
)</errorConditionFormula>
    <errorDisplayField>Parent_Project__c</errorDisplayField>
    <errorMessage>When creating a Child Project, it must be associated with a Parent Project.</errorMessage>
</ValidationRule>