force-app/main/default/objects/Project__c/validationRules/Name_cannot_be_longer_than_80_characters.validationRule-meta.xml
<ValidationRule>
    <fullName>Name_cannot_be_longer_than_80_characters</fullName>
    <active>true</active>
    <errorConditionFormula>LEN(Name) &gt; 80</errorConditionFormula>
    <errorDisplayField>Name</errorDisplayField>
    <errorMessage>Please shorten the name to maximum 80 characters</errorMessage>
</ValidationRule>