force-app/main/default/objects/Project__c/listViews/All_Uncompled_Projects.listView-meta.xml
<ListView>
    <fullName>All_Uncompled_Projects</fullName>
    <columns>CREATED_DATE</columns>
    <columns>NAME</columns>
    <columns>Category__c</columns>
    <columns>Parent_Project__c</columns>
    <columns>Project_Importance__c</columns>
    <columns>Project_Start_Date__c</columns>
    <columns>Deadline__c</columns>
    <columns>Project_Status__c</columns>
    <columns>Is_Child_Project__c</columns>
    <columns>Is_Parent_Project__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>Is_Long_Term_Project__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Project_Status__c</field>
        <operation>notEqual</operation>
        <value>Cancelled,Completed</value>
    </filters>
    <label>All Uncompled Projects</label>
</ListView>