force-app/main/default/objects/Project__c/listViews/Approved_or_In_Planning_Projects.listView-meta.xml
<ListView>
    <fullName>Approved_or_In_Planning_Projects</fullName>
    <columns>Parent_Project__c</columns>
    <columns>NAME</columns>
    <columns>Priority__c</columns>
    <columns>Source_Case__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Project_Status__c</field>
        <operation>equals</operation>
        <value>Approved,Planning</value>
    </filters>
    <label>Upcoming Projects</label>
</ListView>