force-app/main/default/objects/Project__c/listViews/Cancelled_Projects.listView-meta.xml
<ListView>
    <fullName>Cancelled_Projects</fullName>
    <columns>NAME</columns>
    <columns>Project_Importance__c</columns>
    <columns>Project_Start_Date__c</columns>
    <columns>Deadline__c</columns>
    <columns>Project_Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Project_Status__c</field>
        <operation>equals</operation>
        <value>Cancelled</value>
    </filters>
    <label>Cancelled Projects</label>
</ListView>