force-app/main/default/objects/Project__c/listViews/In_Progress_Projects.listView-meta.xml
<ListView>
    <fullName>In_Progress_Projects</fullName>
    <columns>Project_Status__c</columns>
    <columns>NAME</columns>
    <columns>Estimation_Hours__c</columns>
    <columns>Category__c</columns>
    <columns>Parent_Project__c</columns>
    <columns>Project_Start_Date__c</columns>
    <columns>Deadline__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Project__c.Project,012W5000001UVsD</value>
    </filters>
    <filters>
        <field>Project_Status__c</field>
        <operation>equals</operation>
        <value>In Progress</value>
    </filters>
    <filters>
        <field>Is_Long_Term_Project__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>In Progress Projects</label>
</ListView>