force-app/main/default/objects/Project__c/listViews/Long_Term_Projects.listView-meta.xml
<ListView>
    <fullName>Long_Term_Projects</fullName>
    <columns>CREATED_DATE</columns>
    <columns>NAME</columns>
    <columns>Parent_Project__c</columns>
    <columns>Project_Importance__c</columns>
    <columns>Project_Start_Date__c</columns>
    <columns>Deadline__c</columns>
    <columns>Project_Status__c</columns>
    <columns>Is_Child_Project__c</columns>
    <columns>Is_Parent_Project__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>Is_Long_Term_Project__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Project_Status__c</field>
        <operation>notEqual</operation>
        <value>On Hold,Cancelled,Completed</value>
    </filters>
    <filters>
        <field>Is_Long_Term_Project__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Long Term Projects</label>
</ListView>