force-app/main/default/objects/Project__c/listViews/My_Projects.listView-meta.xml
<ListView>
    <fullName>My_Projects</fullName>
    <columns>NAME</columns>
    <columns>Parent_Project__c</columns>
    <columns>Project_Importance__c</columns>
    <columns>Project_Start_Date__c</columns>
    <columns>Deadline__c</columns>
    <columns>Project_Status__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Project_Status__c</field>
        <operation>equals</operation>
        <value>Proposed,Approved,Planning,In Progress,Under Review</value>
    </filters>
    <label>My Projects</label>
</ListView>