force-app/main/default/objects/Project__c/listViews/Parent_Projects.listView-meta.xml
<ListView>
    <fullName>Parent_Projects</fullName>
    <columns>NAME</columns>
    <columns>Number_of_Open_Child_Projects__c</columns>
    <columns>Project_Importance__c</columns>
    <columns>Project_Start_Date__c</columns>
    <columns>Deadline__c</columns>
    <columns>Project_Status__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>Priority__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Project__c.Parent_Project</value>
    </filters>
    <label>Parent Projects</label>
</ListView>