force-app/main/default/objects/Project__c/listViews/Projects_Under_Review.listView-meta.xml
<ListView>
    <fullName>Projects_Under_Review</fullName>
    <columns>NAME</columns>
    <columns>Parent_Project__c</columns>
    <columns>Priority__c</columns>
    <columns>Source_Case__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Project_Status__c</field>
        <operation>equals</operation>
        <value>Under Review</value>
    </filters>
    <label>Projects Under Review</label>
</ListView>