force-app/main/default/objects/Project__c/listViews/Proposed_Projects.listView-meta.xml
<ListView>
    <fullName>Proposed_Projects</fullName>
    <columns>NAME</columns>
    <columns>Project_Importance__c</columns>
    <columns>Project_Start_Date__c</columns>
    <columns>Deadline__c</columns>
    <columns>Project_Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Project_Status__c</field>
        <operation>equals</operation>
        <value>Proposed</value>
    </filters>
    <label>Proposed Projects</label>
</ListView>